# mcsim

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: pr-ci.yml  release.yml
crates/mcsim-agents/: Cargo.toml
crates/mcsim-agents/src/: cli_agent.rs  lib.rs
crates/mcsim-cli-protocol/: Cargo.toml
crates/mcsim-cli-protocol/src/: codec.rs  commands.rs  error.rs  lib.rs  responses.rs
crates/mcsim-common/: Cargo.toml
crates/mcsim-common/src/: entity_tracer.rs  lib.rs
crates/mcsim-companion-protocol/: Cargo.toml
crates/mcsim-companion-protocol/src/: commands.rs  constants.rs  error.rs  frame.rs  lib.rs  responses.rs  types.rs
crates/mcsim-dem/: Cargo.toml
crates/mcsim-dem/examples/: query_elevation.rs
crates/mcsim-dem/src/: aws_tiles.rs  error.rs  lib.rs  manager.rs  tile.rs
crates/mcsim-dem/tests/: integration.rs
crates/mcsim-firmware/: Cargo.toml  build.rs
crates/mcsim-firmware/src/: dll.rs  lib.rs  tracer.rs
crates/mcsim-itm/: Cargo.toml  README.md
crates/mcsim-itm/src/: error.rs  ffi.rs  lib.rs  types.rs
crates/mcsim-link/: Cargo.toml
crates/mcsim-link/src/: estimate.rs  lib.rs  predict.rs
crates/mcsim-lora/: Cargo.toml
crates/mcsim-lora/src/: lib.rs
crates/mcsim-metrics/: Cargo.toml
crates/mcsim-metrics/src/: lib.rs
crates/mcsim-model/: Cargo.toml
crates/mcsim-model/src/: keys.rs  lib.rs
crates/mcsim-model/src/properties/: agent.rs  definitions.rs  mod.rs  registry.rs  types.rs  value.rs
crates/mcsim-runner/: Cargo.toml
crates/mcsim-runner/benches/: threading_benchmark.rs
crates/mcsim-runner/src/: build_model.rs  lib.rs  main.rs  metric_spec.rs  metrics_export.rs  node_thread.rs  packet_tracker.rs  parallel_step.rs  realtime.rs  rerun_blueprint.rs  rerun_logger.rs  uart_server.rs  watchdog.rs
crates/mcsim-runner/tests/: determinism_test.rs  integration_test.rs  metrics_test.rs  one_companion.yaml  trace_test.rs  two_companions.yaml  uart_test.rs
crates/meshcore-packet/: Cargo.toml
crates/meshcore-packet/src/: codec.rs  crypto.rs  error.rs  lib.rs
dem_data/: data.csv
docs/: DIRECT_MESSAGES.md  METRICS.md  METRICS_TESTS.md  RADIO_EMULATION.md  TIMING_AND_DETERMINISM.md
examples/: README.md
examples/behaviors/: broadcast.yaml  burst_traffic.yaml  chatter.yaml  marginal.yaml  single_broadcast.yaml  single_dm.yaml
examples/predict-link/: defaults.yaml  seattle-link.yaml
examples/seattle/: chatter.yaml  client.yaml  sea.yaml
examples/topologies/: cli_test.yaml  diamond.yaml  high_altitude.yaml  long_hops.yaml  multi_path.yaml  room_server.yaml  simple.yaml  two_peers.yaml
patches/: README.md  meshcore-simulator-changes.patch
plans/: ARCHITECTURE.md  MULTI_FIRMWARE_VERSIONS.md  PER_NODE_THREADING.md
scripts/: create_release.bat  create_release.ps1  fetch_mesh_nodes.py  fetch_usgs_dem.py  setup_dependencies.bat  setup_dependencies.ps1  setup_dependencies.sh
simulator/: README.md
simulator/common/include/: AES.h  Arduino.h  CayenneLPP.h  Ed25519.h  FS.h  InternalFileSystem.h  LittleFS.h  RTClib.h  SHA256.h  SPI.h  SPIFFS.h  Stream.h  Wire.h  base64.hpp  sim_api.h  sim_board.h  sim_clock.h  sim_compat.h  sim_context.h  sim_filesystem.h  sim_node_base.h  sim_prefix.h  sim_radio.h  sim_rng.h  sim_serial.h  target.h
simulator/common/include/helpers/: SensorManager.h
simulator/common/include/helpers/ui/: DisplayDriver.h  UIScreen.h  buzzer.h
simulator/common/src/: Arduino.cpp  sim_board.cpp  sim_clock.cpp  sim_filesystem.cpp  sim_node_base.cpp  sim_radio.cpp  sim_rng.cpp  sim_serial.cpp  target.cpp
simulator/companion/: sim_main.cpp
simulator/repeater/: sim_main.cpp
simulator/room_server/: sim_main.cpp
