[package]
name = "mcsim-model"
description = "YAML model loading and simulation building for MCSim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
meshcore-packet.workspace = true
mcsim-common.workspace = true
mcsim-lora.workspace = true
mcsim-metrics.workspace = true
mcsim-firmware.workspace = true
mcsim-agents.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = "1.10"
blake2 = "0.10"
hex = "0.4"
log = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
